--- a/Timer_Bench_C++98/Makefile
+++ b/Timer_Bench_C++98/Makefile
@@ -1,11 +1,11 @@
 CC = c++
-NAME = Timer
+NAME = Timer98
 SRC_DIR = src
 OBJDIR = obj
 ASMDIR = asm
 INCDIR = inc
 
-CFLAGS = -Wall -Wextra -Werror -std=c++11 -g -I$(INCDIR)
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g -I$(INCDIR)
 
 SRC = $(SRC_DIR)/main.cpp \
       $(SRC_DIR)/Timer.cpp
